--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
+    "react-swipeable": "^7.0.0",
     "recharts": "^2.6.0"
   },
   "devDependencies": {
